social icons to footer

--- a/08_Nature-weekend/index.html
+++ b/08_Nature-weekend/index.html
@@ -377,9 +377,20 @@
             </div>
         </div>
         <div class="col-1-of-2">
-            <p class="footer__copyright">
-                Lorem ipsum dolor <a href="#" class="footer__link footer__link-ph"> Nikolay Gaidash </a> sit amet, consectetur adipisicing elit. Atque, autem culpa distinctio dolor dolores error esse facere inventore, maxime placeat quaerat quam quas quo recusandae reprehenderit rerum sunt temporibus velit.
-            </p>
+            <ul class="social">
+                <li class="social__item">
+                    <a href="#" class="social__link"><i class="fab fa-linkedin-in"></i></a>
+                </li>
+                <li class="social__item">
+                    <a href="#" class="social__link"><i class="fab fa-github"></i></a>
+                </li>
+                <li class="social__item">
+                    <a href="#" class="social__link"><i class="fab fa-facebook-f"></i></a>
+                </li>
+                <li class="social__item">
+                    <a href="#" class="social__link"><i class="fab fa-twitter"></i></a>
+                </li>
+            </ul>
         </div>
     </div>
 </footer>
