--- a/08_Nature-weekend/index.html
+++ b/08_Nature-weekend/index.html
@@ -94,7 +94,7 @@
 
     <section class="section-features">
         <div class="row">
-            <div class="col-1-of-4">
+            <div class="col-1-of-4 feature-box__wrap">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-target"></i>
                     <h3 class="heading-tertiary">Find you target</h3>
@@ -105,7 +105,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-1-of-4">
+            <div class="col-1-of-4 feature-box__wrap">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-pencil-ruler"></i>
                     <h3 class="heading-tertiary">Schedule your time</h3>
@@ -116,7 +116,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-1-of-4">
+            <div class="col-1-of-4 feature-box__wrap">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-globe"></i>
                     <h3 class="heading-tertiary">Travel a lot</h3>
@@ -127,7 +127,7 @@
                     </p>
                 </div>
             </div>
-            <div class="col-1-of-4">
+            <div class="col-1-of-4 feature-box__wrap">
                 <div class="feature-box">
                     <i class="feature-box__icon icon-basic-heart"></i>
                     <h3 class="heading-tertiary">Enjoy of nature</h3>
@@ -146,7 +146,7 @@
             <h2 class="heading-secondary">Check out our tourist itineraries</h2>
         </div>
         <div class="row">
-            <div class="col-1-of-3">
+            <div class="col-1-of-3 card__wrap">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--1">
@@ -176,7 +176,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1-of-3">
+            <div class="col-1-of-3 card__wrap">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--2">
@@ -206,7 +206,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1-of-3">
+            <div class="col-1-of-3 card__wrap">
                 <div class="card">
                     <div class="card__side card__side--front">
                         <div class="card__picture card__picture--3">
