--- a/15-zeplin-appStarter/index.html
+++ b/15-zeplin-appStarter/index.html
@@ -132,7 +132,38 @@
     </section>
 
     <section class="section-chess">
-
+        <div class="container">
+            <div class="chess">
+                <div class="chess__block">
+                    <div class="chess__image-box">
+                        <img src="img/tablet.png" class="chess__img" alt="tablet">
+                    </div>
+                </div>
+                <div class="chess__block chess__block--grey">
+                    <div class="chess__text-box">
+                        <h1 class="heading-primary heading-primary--black">
+                            <span class="heading-primary--bold">Perfect</span>
+                            <span class="heading-primary--main"> landing page for your app</span>
+                        </h1>
+                        <p class="chess-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment, and found herself walking.</p>
+                    </div>
+                </div>
+                <div class="chess__block chess__block--grey">
+                    <div class="chess__text-box">
+                        <h1 class="heading-primary heading-primary--black">
+                            <span class="heading-primary--bold">Style guide</span>
+                            <span class="heading-primary--main"> and sample pages included</span>
+                        </h1>
+                        <p class="chess-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment, and found herself walking.</p>
+                    </div>
+                </div>
+                <div class="chess__block">
+                    <div class="chess__image-box">
+                        <img src="img/tablet.png" class="chess__img" alt="tablet">
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 </div>
 </body>
