including section form

--- a/15-zeplin-appStarter/index.html
+++ b/15-zeplin-appStarter/index.html
@@ -81,8 +81,12 @@
                                 <img src="img/reload-icon.png" class="about__img" alt="Reload icon">
                             </div>
                             <div class="about__desc">
-                                <h4 class="heading-quaternary"><span class="heading-quaternary--bold">Sync</span> across all devices</h4>
-                                <p class="about-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment.</p>
+                                <h4 class="heading-quaternary">
+                                    <span class="heading-quaternary--bold">Sync</span>
+                                    across all devices
+                                </h4>
+                                <p class="about-ph">This sounded nonsense to Alice, so she said nothing, but set off at
+                                    once toward the Red Queen. To her surprise, she lost sight of her in a moment.</p>
                             </div>
                         </div>
                         <div class="about-box">
@@ -90,8 +94,12 @@
                                 <img src="img/inbox-icon.png" class="about__img" alt="Reload icon">
                             </div>
                             <div class="about__desc">
-                                <h4 class="heading-quaternary"><span class="heading-quaternary--bold">All emails</span> in one place</h4>
-                                <p class="about-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment.</p>
+                                <h4 class="heading-quaternary">
+                                    <span class="heading-quaternary--bold">All emails</span>
+                                    in one place
+                                </h4>
+                                <p class="about-ph">This sounded nonsense to Alice, so she said nothing, but set off at
+                                    once toward the Red Queen. To her surprise, she lost sight of her in a moment.</p>
                             </div>
                         </div>
                         <div class="about-box">
@@ -99,8 +107,12 @@
                                 <img src="img/clock-icon.png" class="about__img" alt="Reload icon">
                             </div>
                             <div class="about__desc">
-                                <h4 class="heading-quaternary"><span class="heading-quaternary--bold">Track</span> your time</h4>
-                                <p class="about-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment.</p>
+                                <h4 class="heading-quaternary">
+                                    <span class="heading-quaternary--bold">Track</span>
+                                    your time
+                                </h4>
+                                <p class="about-ph">This sounded nonsense to Alice, so she said nothing, but set off at
+                                    once toward the Red Queen. To her surprise, she lost sight of her in a moment.</p>
                             </div>
                         </div>
                     </div>
@@ -118,7 +130,8 @@
                         <span class="heading-primary--main">to get started</span>
                     </h1>
                     <p class="download-ph">
-                        This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment.
+                        This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen.
+                        To her surprise, she lost sight of her in a moment.
                     </p>
                 </div>
                 <div class="download__right">
@@ -145,7 +158,9 @@
                             <span class="heading-primary--bold">Perfect</span>
                             <span class="heading-primary--main"> landing page for your app</span>
                         </h1>
-                        <p class="chess-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment, and found herself walking.</p>
+                        <p class="chess-ph">This sounded nonsense to Alice, so she said nothing, but set off at once
+                            toward the Red Queen. To her surprise, she lost sight of her in a moment, and found herself
+                            walking.</p>
                     </div>
                 </div>
                 <div class="chess__block chess__block--grey">
@@ -154,7 +169,9 @@
                             <span class="heading-primary--bold">Style guide</span>
                             <span class="heading-primary--main"> and sample pages included</span>
                         </h1>
-                        <p class="chess-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment, and found herself walking.</p>
+                        <p class="chess-ph">This sounded nonsense to Alice, so she said nothing, but set off at once
+                            toward the Red Queen. To her surprise, she lost sight of her in a moment, and found herself
+                            walking.</p>
                     </div>
                 </div>
                 <div class="chess__block">
@@ -163,6 +180,148 @@
                     </div>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="section-video">
+        <div class="container">
+            <div class="video">
+                <div class="video__text-box">
+                    <h1 class="heading-primary">
+                        <span class="heading-primary--bold">Watch</span>
+                        <span class="heading-primary--main"> video tour</span>
+                    </h1>
+                    <p class="video-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward
+                        the Red Queen. To her surprise, she lost sight of her.</p>
+                </div>
+                <div class="video__button-box">
+                    <a href="#" class="video__icon"></a>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-card">
+        <div class="container">
+            <div class="card">
+                <div class="card__left">
+                    <div class="card__text-box">
+                        <h1 class="heading-primary heading-primary--black">
+                            <span class="heading-primary--bold">Choose</span>
+                            <span class="heading-primary--main"> your plan</span>
+                        </h1>
+                        <p class="chess-ph card-ph">This sounded nonsense to Alice, so she said nothing, but set off at
+                            once toward the Red Queen. To her surprise, she lost sight of her in a moment, and found
+                            herself walking.</p>
+                        <form action="#" class="card-form">
+                            <div class="card-form__group">
+                                <label for="select" class="card-form__label">Select the number of licenses:</label>
+                                <select name="number" size="1" id="select" class="card-form__select">
+                                    <option value="1">1</option>
+                                    <option value="2">2</option>
+                                    <option value="3">3</option>
+                                </select>
+                            </div>
+                            <div class="card-form__group">
+                                <label for="name" class="card-form__label card-form__label--block">Enter the promo
+                                    code:
+                                </label>
+                                <input type="text" class="card-form__input" placeholder="Promo code" id="name" required>
+                                <button class="btn btn--blue">
+                                    Apply
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+                <div class="card__right">
+                    <div class="card__wrap">
+                        <div class="card__side">
+                            <h4 class="card__heading">
+                                Professional
+                            </h4>
+                            <div class="card__half">
+                                <p class="card__price-value">10$</p>
+                                <div class="card__details">
+                                    <ul>
+                                        <li><span>&#10003;&nbsp;</span>Hundreds of elements</li>
+                                        <li><span>&#10003;&nbsp;</span>Style guide</li>
+                                        <li><span>&#10003;&nbsp;</span>160 icons included</li>
+                                        <li><span>&#10003;&nbsp;</span>Sketch files</li>
+                                        <li><span>&#10003;&nbsp;</span>Commercial licence</li>
+                                    </ul>
+                                </div>
+                                <a href="#" class="btn btn--orange btn--orange-wide">Buy now</a>
+                            </div>
+                        </div>
+                        <div class="card__side card__side--white">
+                            <h4 class="card__heading">
+                                Starter
+                            </h4>
+                            <div class="card__half">
+                                <p class="card__price-value">FREE</p>
+                                <div class="card__details">
+                                    <ul>
+                                        <li><span>&#10003;&nbsp;</span>Hundreds of elements</li>
+                                        <li><span>&#10003;&nbsp;</span>Style guide</li>
+                                        <li><span>&#10003;&nbsp;</span>30 icons included</li>
+                                        <li><span>&#10003;&nbsp;</span>Personal licence</li>
+                                    </ul>
+                                </div>
+                                <a href="#" class="btn btn--green">Get free</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="section-form">
+        <div class="container">
+            <div class="form__text-box">
+                <h1 class="heading-primary">
+                    <span class="heading-primary--bold">Stay</span>
+                    <span class="heading-primary--main"> in touch</span>
+                </h1>
+                <p class="video-ph">This sounded nonsense to Alice, so she said nothing, but set off at once toward the Red Queen. To her surprise, she lost sight of her in a moment.</p>
+            </div>
+            <form action="#" class="contact-form">
+                <div class="row">
+                    <div class="row">
+                        <div class="span-1-of-2">
+                            <input type="text" name="name" id="name-2" placeholder="Your Name" required>
+                        </div>
+                        <div class="span-1-of-2">
+                            <input type="email" name="email" id="email" placeholder="Email Address" required>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="span-1-of-2">
+                            <select name="number" size="1" id="select-1" class="form__select">
+                                <option value="Country">Country</option>
+                                <option value="Germany">Germany</option>
+                                <option value="Italy">Italy</option>
+                                <option value="Ukraine">Ukraine</option>
+                                <option value="USA">USA</option>
+                            </select>
+                        </div>
+                        <div class="span-1-of-2">
+                            <select name="number" size="1" id="select-2" class="form__select">
+                                <option value="City">City</option>
+                                <option value="Berlin">Berlin</option>
+                                <option value="Milano">Milano</option>
+                                <option value="Kiev">Kiev</option>
+                                <option value="Washington">Washington</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <textarea name="message" placeholder="Your message"></textarea>
+                    </div>
+                    <input type="submit" value="Send message" class="btn btn--orange">
+                </div>
+            </form>
         </div>
     </section>
 </div>
