--- a/15-zeplin-appStarter/index.html
+++ b/15-zeplin-appStarter/index.html
@@ -6,8 +6,9 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,700,800" rel="stylesheet">
+    <link rel="stylesheet" href="fonts/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="scss/main.css">
-    <title>Netpeak-Test</title>
+    <title>Test</title>
 </head>
 <body>
 <div class="main-content">
@@ -325,5 +326,31 @@
         </div>
     </section>
 </div>
+<footer class="footer">
+    <div class="container">
+        <div class="footer__wrap">
+            <div class="footer__logo">
+                AppStarter
+            </div>
+            <div class="footer__desc">
+                <p class="footer-ph">Created with&nbsp;<span class="social__icon--heart"><i class="fas fa-heart"></i></span>&nbsp;by&nbsp;<span class="footer__name">Sergey Azovskiy</span></p>
+                <div class="footer__copy">&copy;&nbsp;AppStarter, 2017</div>
+            </div>
+            <div class="footer__social">
+                <ul class="social">
+                    <li class="social__item social__item--1">
+                        <a href="#" class="social__link"><i class="fab fa-twitter social__icon"></i></a>
+                    </li>
+                    <li class="social__item social__item--2">
+                        <a href="#" class="social__link"><i class="fab fa-facebook-f social__icon"></i></a>
+                    </li>
+                    <li class="social__item social__item--3">
+                        <a href="#" class="social__link"><i class="fab fa-instagram social__icon"></i></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
