--- a/15-zeplin-appStarter/index.html
+++ b/15-zeplin-appStarter/index.html
@@ -48,7 +48,7 @@
             <div class="header__text-box">
                 <div class="header__text">
                     <div class="header__icon">
-                        <img src="img/app-icon.png" alt="App Icon">
+                        <img src="img/app-icon.png" alt="App Icon" class="header__img">
                     </div>
                     <h1 class="heading-primary">
                         <span class="heading-primary--bold">AppStarter.</span>
@@ -57,7 +57,7 @@
                     <a class="btn btn--orange">Download now</a>
                     <a class="btn btn--white">Watch video</a>
                 </div>
-                <div class="header-tablet">
+                <div class="tablet">
                     <img src="img/tablet.png" class="tablet__img" alt="Tablet">
                 </div>
             </div>
