adaptive tablet & mobile

--- a/15-zeplin-appStarter/index.html
+++ b/15-zeplin-appStarter/index.html
@@ -38,7 +38,7 @@
                             <li class="header__item">
                                 <a href="#" class="header__link">Get It Free</a>
                             </li>
-                            <li class="header__item">
+                            <li class="header__item header__item--burger">
                                 <a href="#" class="header__link header__link--burger">&#9776;</a>
                             </li>
                         </ul>
@@ -71,9 +71,6 @@
                     <div class="about-tablet">
                         <img src="img/tablet.png" class="tablet__img" alt="Tablet">
                     </div>
-                </div>
-                <div class="about__right-wrap">
-
                 </div>
                 <div class="about__right">
                     <div class="about__right-wrap">
