--- a/15-zeplin-appStarter/index.html
+++ b/15-zeplin-appStarter/index.html
@@ -22,7 +22,7 @@
                 </div>
                 <div class="header__right">
                     <nav class="header__nav">
-                        <ul class="header__list">
+                        <ul class="header__list js--list">
                             <li class="header__item">
                                 <a href="#" class="header__link">Features</a>
                             </li>
@@ -38,10 +38,10 @@
                             <li class="header__item">
                                 <a href="#" class="header__link">Get It Free</a>
                             </li>
-                            <li class="header__item header__item--burger">
-                                <a href="#" class="header__link header__link--burger">&#9776;</a>
-                            </li>
                         </ul>
+                        <div class="header__burger js--burger">
+                            <div class="header__strip"></div>
+                        </div>
                     </nav>
                 </div>
             </div>
@@ -349,5 +349,7 @@
         </div>
     </div>
 </footer>
+<script src="js/jquery-3.3.1.min.js"></script>
+<script src="js/main.js"></script>
 </body>
 </html>
